--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,22 @@
     "service_worker": "background.js"
   },
   "permissions": ["storage", "activeTab", "scripting"],
-  "action": {},
+  "action": {
+    "default_popup": "./idk/popup.html",
+    "default_icon": {
+      "16": "/images/get_started16.png",
+      "32": "/images/get_started32.png",
+      "48": "/images/get_started48.png",
+      "128": "/images/get_started128.png"
+    }
+  },
   "icons": {
     "16": "/images/get_started16.png",
     "32": "/images/get_started32.png",
     "48": "/images/get_started48.png",
     "128": "/images/get_started128.png"
   },
+  "options_page": "src/optionsPage/options.html",
   "chrome_url_overrides": {
     "newtab": "src/homePage.html"
   }
