changed sideBAR to sideBLOCK, ANIMATION!!!!!

--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,26 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Kalm",
+  "description": "Minimalist new tab page",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "alarms"],
   "action": {
     "default_popup": "./idk/popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/icons/get_started16.png",
+      "32": "/images/icons/get_started32.png",
+      "48": "/images/icons/get_started48.png",
+      "128": "/images/icons/get_started128.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/icons/get_started16.png",
+    "32": "/images/icons/get_started32.png",
+    "48": "/images/icons/get_started48.png",
+    "128": "/images/icons/get_started128.png"
   },
   "options_page": "src/optionsPage/options.html",
   "chrome_url_overrides": {
